--- a/inst_proj.tex
+++ b/inst_proj.tex
@@ -49,7 +49,7 @@
 Обозреть статью с моделью по монопсонии. 
 Обозреть стаью по олигпсонии, там сделать акцент на том, что олигпосния может многие аномалии объяснить. (Возможно нужно будет также сделать акцент на взаимодействии )
 Обозреть эконометрическую статью
-
+Привет, я Мира! 
 
 \section{Модель}
 
