--- a/inst_proj.tex
+++ b/inst_proj.tex
@@ -161,10 +161,15 @@ foreign & 0.07161 & 0.02056 \\
 
 Все полученные коэфициенты значимы даже при очень маленьких уровнях значимости ($\alpha<0.001$).
 
-В нашем примере R^2=0.36. Такое значение позволяет нам думать, что зависимость однозначно существует, но частично остаток должен объясниться с помощью дополнительных регрессоров, например, опыт или возраст и квадрат этих величин. В данном уравнении не было использовано таких переменных, ибо в нашей базе данных не было возраста преподавателей, а восстанавливать его достаточно сложно.
+В нашем примере $R^2=0.36$. Такое значение позволяет нам думать, что зависимость однозначно существует, но частично остаток должен объясниться с помощью дополнительных регрессоров, например, опыт или возраст и квадрат этих величин. В данном уравнении не было использовано таких переменных, ибо в нашей базе данных не было возраста преподавателей, а восстанавливать его достаточно сложно.
 Также коэффициент, который мы получили при seniority больше, чем аналогичный у Ransom 1993. Этот факт можно объяснить как раз из-за потерянных нами важных переменных (в уравнении Минцера возраст является одним из важнейших показателей).
 
 Также, возможные проблемы могут возникать из-за того, что выборка не является репрезентативной. Такой вывод можно сделать исходя из графика плотности логарифма заработной платы: в идеальной ситуации логарифм заработной платы должен быть распределен нормально, однако, в здесь наблюдается смещение в сторону более высоких зарплат профессоров.
+
+
+\begin{center}
+\includegraphics[scale=0.5]{image1}
+\end{center}
 
 \section{Заключение}
 
