--- a/inst_proj.tex
+++ b/inst_proj.tex
@@ -46,10 +46,18 @@
 Мы устверждаем, что в существуют рынки на которых присутствует сразу несколько игроков со стороны спроса на труд в одном регионе. 
 \section{Обзор литературы}
 
-Обозреть статью с моделью по монопсонии. 
-Обозреть стаью по олигпсонии, там сделать акцент на том, что олигпосния может многие аномалии объяснить. (Возможно нужно будет также сделать акцент на взаимодействии )
-Обозреть эконометрическую статью
-Привет, я Мира! 
+Большинство теорий, связанных с рынком труда, предполагает наличие положительной зависимости уровня заработных плат и продолжительности времени работы в конкретном месте. Наиболее известными работами, демонстрирующими данный эффект, являются статьи Walter Oi (1962) и Jacob Mincer (1974). Однако существуют такие рынки труда, где некоторые исследователи выявляют отрицательную зависимость. Именно таковым и является академический рынок труда, привлёкший наше внимание. 
+	Сперва обратимся к моделе, описанной в статье Michael R. Ransom (1993). Автор привёл эмпирическое доказательство того, что с увеличением времени работы профессоров в одном университете их заработная плата падает. Он продемонстрировал выводы трёх различных исследований, получивших несильно разнящиеся результаты, подтверждающие его основную гипотезу. Первое из них - Carnegie Commission National Survey of Higher Education: Faculty Study (1969) заключило что, индивиды, проработавшие как минимум 30 лет в одном университете, зарабатывают примерно на 15%  меньше тех, кто проработал менее двух лет. При этом эффект ярче выражен для более престижных университетов. Важно отметить, что регрессия строилась с поправкой на учёную степень, научную область, пол, расу, качество института, диплом которого получен, продолжительность контракта и контролируемость нанимающего учреждения частным сектором. 
+	Результаты исследования American Council on Education's (1973) были следующими:  для исследовательских университетов заработная плата снижается примерно на 0.4% с ежегодным ростом сеньорити (условимся так называть продолжительность времени работы в конкретном месте). 
+	Другое исследование, упомянутое автором, - Survey of the American Professoriate (1977). Для всей выборки университетов корреляция между заработными платами и сеньорити не являлась существенной, однако, для исследовательских университетов заработные платы действительно снижались в ростом сеньорити. Эффект наиболее выражен для профессоров с 16-20 годами сеньорити, которые зарабатывают примерно на 7% меньше нежели те, у кого сеньорити не более двух лет (с поправкой на опыт, образование и другие факторы). 
+	По результатам всех трёх исследований заключается, что смена места работы может увеличить заработную плату профессора примерно на 5-6%. Также величина снижения заработных плат зависит от академической сферы: для большинства областей падение составляет 0.5%, в то время как бухгалтерский учёт и экономика демонстрируют более 1% ежегодно. 
+	Далее Michael R. Ransom оценивает собственную модель на данных университета Аризоны и приходит к выводу: заработные платы падают примерно на 1% c ежегодным ростом сеньорити - эффект более значимый в сравнении с упомянутыми ранее исследованиями. 
+	После всех описанных выше эмпирических результатов Michael R. Ransom заключает, что действительно можно говорить о существовании отрицательной связи заработной платы и сеньорити. Автор приводит различные объяснения замеченного феномена. Одно из которых - более способные профессора имеют множество альтернатив, в то время как менее способные вынуждены оставаться на прежнем рабочем месте. Эта идея и лежит в основе моделей Milton Harris and Bengt Holmstrom (1982) и Lazear (1986). Поскольку первоначально фирма не знает о способностях работника, она предлагает стартовую заработную плату. В результате некоторые работники остаются недооценёнными. Другие фирмы идентифицируют таких работников и стараются их нанять, предлагая более высокую заработную плату. Получается, что более «высококачественные» работники получают более высокую заработную плату, а работники с высоким сеньорити имеют тенденцию быть «низкокачественными» и получать более низкую заработную плату. Тем не менее остаётся неясным, каким образом измерять «качество» работников. В качестве одного из способов оценки продуктивности авторы предложили число публикаций. Оказалось, что профессора с высоким сеньорити несильно отличаются количеством публикаций о тех, кто работает недолго в данном университете. Авторы пришли к выводу, что продуктивность или же «качество» работников не может служить адекватным объяснением отрицательной зависимости заработных плат и продуктивности.
+	Продолжая поиски ответа на поставленный вопрос, Michael R. Ransom строит модель монопсонистической дискриминации. Он предполагает наличие одного университета в городе, поэтому для смены работы профессору необходимо переехать, что влечёт за собой определённые издержки. Если издержки высоки, агент предпочтёт остаться в прежнем городе (продолжительность работы в одном университете будет расти), а заработная плата будет ниже возможной предложенной университетом в каком-либо другом городе. Однако данная модель не предсказывает, что зарплаты будут падать с ростом сеньорити. Оценённый коэффициент регрессии смещён, поскольку мы не можем включить в неё ненаблюдаемую компоненту издержек переезда. 
+	Теперь, когда мы пронаблюдали на монопсоническом рынке эффект падения заработных плат с увеличением сеньорити на примере различных эмпирических исследований и рассмотрели математическую модель, встаёт вопрос: будет ли иметь место рассматриваемый феномен на рынке олигопсонии? Сперва обратимся к исследованию, которое в принципе отрицает существование выявленного феномена, затем уделим внимание особенностям олигопсонического рынка.
+	Позднее вышла статья авторов William J. Moore, Robert J. Newman, Geoffrey K. Turnbull (1998), получивших совершенно иные результаты. Отрицательная зависимость  между заработной платой и сеньорити полностью исчезла, когда в модель включили более исчерпывающие оценки продуктивности индивидов, такие как количество публикаций, цитируемость и многие другие. В качестве выборки авторы использовали профессоров, нанятых на программы Ph.D по экономике в 9 государственных университетов. Для усовершенствования предыдущих моделей продуктивность профессоров стали измерять в трёх сферах: исследования, преподавание и управление. Каждой из них был присвоен свой вес в зависимости от целевой функции кафедры. При этом вводилось предположение, что  исследования являлись самой важной компонентой. Для получения градации качества статей, авторы разделили публикации на два типа по отношению к журналу, в котором были напечатаны. Также была введена переменная, отвечающая за цитируемость: как часто другие исследователи ссылались на данную статью. Качество преподавания оценивалось с помощью дамми переменной, которой присваивалась единица в случае, если профессор когда-либо получал награду за преподавание. И последняя оценка продуктивности - количество лет на должности заведующего кафедрой в высшем учебном заведении как показатель управленческих навыков. Также в модель были включены дополнительные дамми переменные, такие как пол индивида, язык страны (английский-1/не английский-0) и рейтинг университета, где получал Ph.D (топовый-1/ не топовый-0). 
+	В результате, базовая регрессия оценённая на опыт и синьорити даже с добавлением количества публикаций выявляет отрицательную зависимость заработных плат и продолжительности времени работы в конкретном университете. Однако по мере расширения модели и добавления в неё других вышеописанных переменных наблюдаемая ранее связь исчезает. Профессора с большим сеньорити получают заработную плату относительно меньшую лишь потому, что многие из них менее продуктивны в сравнении в теми, у кого сеньорити ниже.
+	Теперь обратимся к статье V. Bhaskar, Alan Manning and Ted To (2002), которая поможет нам понять природу олигопсонии. Авторы говорят,  что монопсония - крайне нереалистичное предположение о функционировании рынка труда; олигопсония же представляет собой более подходящую структуру. Она описывает ситуацию, когда работодатели обладают рыночной силой, несмотря на то, что конкурируют друг с другом. 
 
 \section{Модель}
 
