--- a/inst_proj.tex
+++ b/inst_proj.tex
@@ -47,7 +47,7 @@
 Мы устверждаем, что в существуют рынки на которых присутствует сразу несколько игроков со стороны спроса на труд в одном регионе. 
 \section{Обзор литературы}
 
-Большинство теорий, связанных с рынком труда, предполагает наличие положительной зависимости уровня заработных плат и продолжительности времени работы в конкретном месте. Наиболее известными работами, демонстрирующими данный эффект, являются статьи Walter Oi (1962) и Jacob Mincer (1974). Однако существуют такие рынки труда, где некоторые исследователи выявляют отрицательную зависимость. Именно таковым и является академический рынок труда, привлёкший наше внимание. 
+Большинство теорий, связанных с рынком труда, предполагает наличие положительной зависимости уровня заработных плат и продолжительности времени работы в конкретном месте. Наиболее известными работами, демонстрирующими данный эффект, являются статьи Walter Oi (1962) и Jacob Mincer (1974), описывающие теорию специфического человеческого капитала. Согласно ей фирма поощряет работника за приобретение навыков и знаний, которые специфичны для конкретного работодателя. Фирма устанавливает более высокую заработную плату, стимулируя работника не увольняться, чтобы «окупить» собственные инвестиции в человеческий капитал. Всё же существуют такие рынки труда, где исследователи выявляют отрицательную зависимость уровня заработных плат и продолжительности времени работы в конкретном месте. Именно таковым и является академический рынок труда, привлёкший наше внимание.
 
 Сперва обратимся к моделе, описанной в статье Michael R. Ransom (1993). Автор привёл эмпирическое доказательство того, что с увеличением времени работы профессоров в одном университете их заработная плата падает. Он продемонстрировал выводы трёх различных исследований, получивших несильно разнящиеся результаты, подтверждающие его основную гипотезу. Первое из них - Carnegie Commission National Survey of Higher Education: Faculty Study (1969) заключило что, индивиды, проработавшие как минимум 30 лет в одном университете, зарабатывают примерно на 15\%  меньше тех, кто проработал менее двух лет. При этом эффект ярче выражен для более престижных университетов. Важно отметить, что регрессия строилась с поправкой на учёную степень, научную область, пол, расу, качество института, диплом которого получен, продолжительность контракта и контролируемость нанимающего учреждения частным сектором. 
 
