--- a/inst_proj.tex
+++ b/inst_proj.tex
@@ -2,7 +2,7 @@
 \usepackage{fontspec} 
 \usepackage[utf8]{inputenc}
 \usepackage[russian,english]{babel}
-\addto{\captionsrussian}{\renewcommand{\bibname}{Список литературы}}
+
 \setmainfont{Times New Roman}
 \renewcommand{\baselinestretch}{1.5} 
 
@@ -196,7 +196,7 @@ foreign & 0.07161 & 0.02056 \\
 
 \section{Заключение}
 
-
+\renewcommand{\refname}{Список литературы}
 \bibliographystyle{plain}
 \bibliography{biblio} 
 
