--- a/inst_proj.tex
+++ b/inst_proj.tex
@@ -39,7 +39,15 @@
 \title{Исследовательский проект по инстуциональной экономике}
 
 \begin{document}
-\maketitle
+\begin{center}
+{\Large\sc Исследовательский проект по инстуциональной экономике}\vspace{0.2cm}\\
+\end{center}
+\begin{center}
+{\bf Филатов Артём, Федотова Мирослава, Киселёв Дмитрий и Фурсов Иван}\vspace{0.1cm}\\
+{\it Национальный исследовательский университет Высшая Школа Экономики\\ 
+Москва, Российская Федерация}\vspace{0.1cm}\\
+\end{center}
+
 
 \noindent{\bf Аннотация }-- Основная идея работы заключалась в построении модели олигпсонического рынка труда на основе случайных исходов для проверки гипотезы об отрицательной зависимости стажа работы на одном месте и заработной платы профессоров на академическом рынке труда в США. Построив модель, мы получили, что на рынках, где присутствует несколько университетов одного уровня мы ожидаем увидеть более слабый эффект от увеличения стажа работы,  нежели в случае монопсонии, это в первую очередь связано с конкуренцией за профессоров, которая переодически будет возникать на рынках подобного типа. Выводы модели мы проверили на данных о зарплатах профессоров в городе Хьюстон, Техас. К сожалению, анализ данных не позволил нам сделать окончательный вывод о применимости нашей модели. 
 
