--- a/inst_proj.tex
+++ b/inst_proj.tex
@@ -52,7 +52,7 @@
 \noindent{\bf Аннотация }-- Основная идея работы заключалась в построении модели олигпсонического рынка труда на основе случайных исходов для проверки гипотезы об отрицательной зависимости стажа работы на одном месте и заработной платы профессоров на академическом рынке труда в США. Построив модель, мы получили, что на рынках, где присутствует несколько университетов одного уровня мы ожидаем увидеть более слабый эффект от увеличения стажа работы,  нежели в случае монопсонии, это в первую очередь связано с конкуренцией за профессоров, которая переодически будет возникать на рынках подобного типа. Выводы модели мы проверили на данных о зарплатах профессоров в городе Хьюстон, Техас. К сожалению, анализ данных не позволил нам сделать окончательный вывод о применимости нашей модели. 
 
 \section{Введение}
-Мы устверждаем, что в существуют рынки на которых присутствует сразу несколько игроков со стороны спроса на труд в одном регионе. 
+Снижение заработной платы профессоров с увеличением стажа работы является довольно необычным феноменом для рынка труда, так как правило наблюдается абсолютно противоположный эффект --- стаж положительно влияет на зарплату.  Целью нашей работы было понять причины такого эффекта и предложить альтернативный подход к анализу проблемы. В основу работы легла модель предложенная Michael R.Ransom в 1993 году [1] мы модифицировали данную модель, включив в неё конкурирующие между собой университеты. 
 \section{Обзор литературы}
 
 Большинство теорий, связанных с рынком труда, предполагает наличие положительной зависимости уровня заработных плат и продолжительности времени работы в конкретном месте. Наиболее известными работами, демонстрирующими данный эффект, являются статьи Walter Oi (1962) и Jacob Mincer (1974), описывающие теорию специфического человеческого капитала. Согласно ей фирма поощряет работника за приобретение навыков и знаний, которые специфичны для конкретного работодателя. Фирма устанавливает более высокую заработную плату, стимулируя работника не увольняться, чтобы «окупить» собственные инвестиции в человеческий капитал. Всё же существуют такие рынки труда, где исследователи выявляют отрицательную зависимость уровня заработных плат и продолжительности времени работы в конкретном месте. Именно таковым и является академический рынок труда, привлёкший наше внимание.
@@ -203,6 +203,8 @@ foreign & 0.07161 & 0.02056 \\
 \end{center}
 
 \section{Заключение}
+
+Для дальнейших исследований: можно проанализровать данную ситуацию со стороны рыночной власти. профессор является эксклюзивным товаром на рынке, в особенности это относится к профессорам Лиги Плюща, в следствие этого профессор получает некоторую власть на рынке, которая становится тем больше, чем больше университетов предъявляют на него спрос. 
 
 \renewcommand{\refname}{Список литературы}
 \bibliographystyle{plain}
