--- a/inst_proj.tex
+++ b/inst_proj.tex
@@ -52,11 +52,7 @@
 \noindent{\bf Аннотация }-- Основная идея работы заключалась в построении модели олигпсонического рынка труда на основе случайных исходов для проверки гипотезы об отрицательной зависимости стажа работы на одном месте и заработной платы профессоров на академическом рынке труда в США. Построив модель, мы получили, что на рынках, где присутствует несколько университетов одного уровня мы ожидаем увидеть более слабый эффект от увеличения стажа работы,  нежели в случае монопсонии, это в первую очередь связано с конкуренцией за профессоров, которая переодически будет возникать на рынках подобного типа. Выводы модели мы проверили на данных о зарплатах профессоров в городе Хьюстон, Техас. К сожалению, анализ данных не позволил нам сделать окончательный вывод о применимости нашей модели. 
 
 \section{Введение}
-<<<<<<< Updated upstream
-Мы устверждаем, что в существуют рынки на которых присутствует сразу несколько игроков со стороны спроса на труд в одном регионе. 
-=======
 Снижение заработной платы профессоров с увеличением стажа работы является довольно необычным феноменом для рынка труда, так как правило наблюдается абсолютно противоположный эффект --- стаж положительно влияет на зарплату.  Целью нашей работы было понять причины такого эффекта и предложить альтернативный подход к анализу проблемы. В основу работы легла модель предложенная Michael R.Ransom в 1993 году [1] мы модифицировали данную модель, включив в неё конкурирующие между собой университеты. Мы также использовали случайный подход при поиске равновесия, которое установится на рынке, так как это позволяет нам учесть такие не
->>>>>>> Stashed changes
 \section{Обзор литературы}
 
 Большинство теорий, связанных с рынком труда, предполагает наличие положительной зависимости уровня заработных плат и продолжительности времени работы в конкретном месте. Наиболее известными работами, демонстрирующими данный эффект, являются статьи Walter Oi (1962) и Jacob Mincer (1974), описывающие теорию специфического человеческого капитала. Согласно ей фирма поощряет работника за приобретение навыков и знаний, которые специфичны для конкретного работодателя. Фирма устанавливает более высокую заработную плату, стимулируя работника не увольняться, чтобы «окупить» собственные инвестиции в человеческий капитал. Всё же существуют такие рынки труда, где исследователи выявляют отрицательную зависимость уровня заработных плат и продолжительности времени работы в конкретном месте. Именно таковым и является академический рынок труда, привлёкший наше внимание.
@@ -89,29 +85,29 @@
 
 \section{Модель}
 
-Многие статьи рассматривают академический рынок труда как монопсонию [1]. Мы утверждаем, что существуют рынки олигопсонического типа и совсем не очевидно, что на них будет наблюдаться тенденция к понижению заработной платы. Также, согласно статье [2], олигпсония может рождаться в результате появления издрержек на переезд, что напрямую относится к рынку профессоров. В связи с этим, мы считаем, что предпосылка о таком виде рынка имеет место быть.  Мы рассмотрим модель олигпсонического рынка труда, в рамках которой у профессора будет выбор либо остаться в своем регионе и пойти в один из университетов, либо уехать, но понести издержки переезда. Модель будет строится на основе модели монопсонического рынка из статьи Seniority and Monopsony in the Academic Labor Market Michael R. Ransom (1993). Из неё мы возьмём базовую концепцию равновесия и включим в неё новых игроков. 
+Многие статьи рассматривают академический рынок труда как монопсонию [1]. Мы утверждаем, что существуют также и рынки олигопсонического типа, и совсем не очевидно, что на них будет наблюдаться тенденция к понижению заработной платы. Также согласно статье [2] олигпсония может рождаться в результате появления издрержек на переезд, что напрямую относится к рынку профессоров. В связи с этим мы считаем, что предпосылка о таком виде рынка имеет место быть.  Мы рассмотрим модель олигпсонического рынка труда, в рамках которой у профессора будет выбор: либо остаться в своем регионе и пойти в один из университетов, либо уехать и понести издержки переезда. Модель будет строится на основе модели монопсонического рынка из статьи Seniority and Monopsony in the Academic Labor Market Michael R. Ransom (1993). Из неё мы возьмём базовую концепцию равновесия и добавим новых игроков. 
 
-Пусть существует рынок в рамках одного города, где присутствует $n$ университетов, предъявляющие спрос на одних и тех же академических работников. Обычно, в США в одном городе находится лишь несколько ВУЗов, которые могли бы предъявлять спрос и на одну и ту же рабочую силу, но для общности мы пока буем предполагать, что их $n$. Рынок академических работников основан, в своем большинстве, на личном взаимодействии, так как преподаватели являются единственными экземплярами предлагающие именно такую комбинацию способностей. Это сильно отличает академический рынок труда от многих других. В следствии этого, каждый университет выбирает, какую зарплату предложить отдельно для каждого работника. Зарплату, предложенную $i$ университетом, мы будет обозначать $w_i$. Также будет существовать рыночная заралата $w_m$, именно с такой зарплатой университету придется нанять работника, если профессор, которому предложили зарплату $w_i$ откажется. Университет минимизирует свои ожидаемые издержки: 
+Пусть существует рынок в рамках одного города, где присутствует $n$ университетов, предъявляющих спрос на одних и тех же академических работников. Обычно в США в одном городе находится лишь несколько ВУЗов, которые могли бы предъявлять спрос на одну и ту же рабочую силу, но для общности мы пока буем предполагать, что их $n$. Рынок академических работников основан в своем большинстве на личном взаимодействии, так как преподаватели являются единственными экземплярами, предлагающими именно такую комбинацию способностей. Это сильно отличает академический рынок труда от многих других (неплохо бы ссылку). Вследствие этого каждый университет выбирает, какую зарплату он предложит отдельному работнику. Зарплату, предложенную $i$ университетом, мы будет обозначать $w_i$. Также будет существовать рыночная заралата $w_m$; именно с такой зарплатой университету придется нанять работника, если профессор, которому предложили зарплату $w_i$, откажется. Университет минимизирует свои ожидаемые издержки: 
 \[
 EC(w_i) = p_i(w_m, w_i, m, w_{j \neq i})w_i + (1 - p_i(w_m, w_i, m, w_{j \neq i}))w_m
 \]
 
-Как мы видим, в зависимости от предложенной зарплаты, зарплаты предложенной другими университетами, зарплаты по рынку и издержкам переезда будет устанавливаться некоторое распределение, случайным исходом для которой будет являться выбор, который сделает преподаватель. Как и в модели с монопсонией, мы будем предлагать для простоты, что агенты обладают полной информацией, и единственный источник случайности заключается в выборе профессора одного из университетов. Мы можем предложить, что функция $p_i ( w_m, w_i, m, w_{j \neq i}) $ имеет следующий вид: 
+Как мы видим, в зависимости от предложенной зарплаты, зарплаты предложенной другими университетами, зарплаты по рынку и издержкам переезда будет устанавливаться некоторое распределение, случайным исходом для которой будет являться выбор, сделанный преподавателем. Как и в модели с монопсонией мы будем считать для простоты, что агенты обладают полной информацией, и единственный источник случайности заключается в выборе профессором одного из университетов. Мы можем предположить, что функция $p_i ( w_m, w_i, m, w_{j \neq i}) $ имеет следующий вид: 
 \[
 p_i( w_m, w_i, m, w_{j \neq i}) = \frac{p_i(w_i - w_m + \delta m) w_i}{\#\{w_j : w_i = w_j\}}\mathds{1} \{ w_i \geq w_ {i \neq j}\}
 \]
-Профессор сравнивает предложенную ему зарплату некоторым университетом с зарплатой рынка и своими дисконтированными издержками. Более того, в виду наличия функции индикатора максимальной цены, преподаватель будет рассматривать лишь тот университет, который предложил ему наибольшую зарплату. Всем остальным вузам придется нанимать преподавателя на общем рынке. Ввиду присутствия ненаблюдаемых факторов решение всё равно остается случайным. 
+Профессор сравнивает предложенную ему зарплату некоторым университетом с зарплатой рынка и своими дисконтированными издержками переезда. Более того, ввиду наличия функции индикатора максимальной цены преподаватель будет рассматривать лишь тот университет, который предложил ему наибольшую зарплату. Всем остальным ВУЗам придется нанимать преподавателя на общем рынке. По причине присутствия ненаблюдаемых факторов решение всё равно остается случайным. 
 
 Возможен также случай, когда несколько университетов предложат максимальную зарплату. Именно этот фактор учитывает знаменатель дроби, который означает, что вероятность попасть в конкретный ВУЗ делится на количество ВУЗов, предложивших такую же зарплату. 
 
-Проанализируем поведение стороны спроса на рынке. В статье Olygopsony and Monopsonistic Competition in Labor Markets Bhaskar, A. Manning, Ted To (2002)  рассматриваются различные варианты взаимодействия игроков на олигпсоническом рынке.  Мы будем предполагать, что они не вступают в сговор. Мы считаем, что такая предпосылка вполне оправдана, так как профессора являются единичным товаром, в следствии чего доход от его приобретения почти невозможно разделить легальным путем. 
+Проанализируем поведение стороны спроса на рынке. В статье Olygopsony and Monopsonistic Competition in Labor Markets Bhaskar, A. Manning, Ted To (2002)  рассматриваются различные варианты взаимодействия игроков на олигпсоническом рынке.  Мы будем предполагать, что они не вступают в сговор. Мы считаем, что такая предпосылка вполне оправдана, так как профессора являются единичным товаром, вследствие чего доход от его приобретения почти невозможно разделить легальным путем. 
 
-Заметим, что если вуз устанавливает зарплату ниже чем его конкуренты, то он сталкивается с рыночной ценой с вероятностью 1, соответсвенно, в симметричном равновесии  вузы должны установить одинаковую зарплату. И должно быть выполнено следующее условие для каждого конкретного учебного заведения
+Заметим, что если ВУЗ устанавливает зарплату ниже чем его конкуренты, то он сталкивается с рыночной ценой с вероятностью 1, соответсвенно в симметричном равновесии  вузы установят одинаковую зарплату. Также должно быть выполнено следующее условие для каждого конкретного учебного заведения:
 \[
 p_i(w_i - w_m + \delta m) w_i + (1 - p_i(w_i - w_m + \delta m))w_m = \frac{p_i(w_i - w_m + \delta m) w_i}{n} + (1 -\frac{ p_i(w_i - w_m + \delta m)}{n})w_m \leq w_m
 \]
-Это уравнение означает, что конкретному ВУЗу не выгодно повысить зарплату на любую положительную величину, чтобы повысить вероятность прихода к нему профессора, и, более того, в равновесии ожидаемые издержки отдельного ВУЗа не должны превышать рыночную цену на учёного, иначе он обязательно переключится на эту альтернативу
-Раскрывая скобки мы получаем 
+Это уравнение означает, что конкретному ВУЗу невыгодно увеличивать зарплату на любую положительную величину длля повышения вероятность прихода к нему профессора. Более того, в равновесии ожидаемые издержки отдельного ВУЗа не должны превышать рыночную цену на учёного, иначе он обязательно переключится на эту альтернативу.
+Раскрывая скобки, мы получаем: 
 \[
 \frac{(n-1)p_i(w_i - w_m + \delta m) w_i}{n} = \frac{(n-1) p_i(w_i - w_m + \delta m) w_m}{n}
 \]
@@ -119,11 +115,11 @@ p_i(w_i - w_m + \delta m) w_i + (1 - p_i(w_i - w_m + \delta m))w_m = \frac{p_i(w
 w_i = w_m
 \]
 
-Мы видим, что в случае такой конкуренции будет установлено равновесие, в котором каждый вуз предлагает одинаковую зарплату, равную рыночной, ученый, в свою очередь, с вероятностью $p(\delta m)/n$ выбирает один из вузов, и с вероятностью $1 - p(\delta m)$ уезжает из города. Соответсвенно, мы не ожидаем увидеть на данных тенденцию к понижению зарплаты на таких рынках. Более того, можно сказать, что почти не существует ситуаций, когда несколько ВУЗов в одном городе предлагают профессору рыночную зарплату. Но так как теперь ВУЗам безразлично с точки зрения модели, какого профессора брать, то со стороны спроса вполне может остаться только один агент. Также естественно предположить, что не за каждого профессора идёт такая борьба на рынке труда, следовательно, на данных мы ожидаем увидеть не противоположный эффект, как в предыдущих статьях, но более слабый. 
+Мы видим, что в случае такой конкуренции будет установлено равновесие, в котором каждый ВУЗ предлагает одинаковую зарплату, равную рыночной, ученый в свою очередь с вероятностью $p(\delta m)/n$ выбирает один из вузов и с вероятностью $1 - p(\delta m)$ уезжает из города. Соответсвенно, мы не ожидаем увидеть на данных тенденцию к понижению зарплаты на таких рынках. Более того, можно сказать, что почти не существует ситуаций, когда несколько ВУЗов в одном городе предлагают профессору рыночную зарплату. Но так как теперь ВУЗам безразлично с точки зрения модели, какого профессора брать, то со стороны спроса вполне может остаться только один агент. Также естественно предположить, что не за каждого профессора идёт такая борьба на рынке труда, следовательно на данных мы ожидаем увидеть не противоположный эффект, как в предыдущих статьях, а более слабый. 
 
-Мы выяснили, что в случае такой ситуации на рынке мы не ожидаем понижения зарплат. Аналогично монопсонической модели мы можем предложить, что в течение жизни профессора через равные промежутки времени перед ним встаёт снова выбор, уехать или нет.  Его зарплата в этот момент обновляется в результате реализации случайного события.  Именно на основании такого анализа авторы статьи [1] и пришли к выводу о падении зарплат. В связи с этим мы можем предположить, что конкуренция за профессора не ведется на протяжении всех периодов, что, по нашему мнению, является вполне осознанной предпосылкой, так как профессора редко меняют университет, исходя из этого можно заключить, что и в конкуренцию за профессоров ВУЗы вступают редко. Следовательно, в какие-то периоды, мы будем снова оказываться в случае монопсонии. Тогда на протяжении всех периодов зарплата будет вести себя скачкообразно, если профессор всё это время оставался в городе. % если будет не хватать места, то я опишу математически этот эффект
-
-В динамике мы получили, что эффект понижения зарплат на таких рынках будет наблюдаться, только теперь он будет  слабее, чем на рынках, где лишь один университет определенного уровня.
+Мы выяснили, что в случае олигопсонии на рынке мы не ожидаем понижения зарплат. Аналогично монопсонической модели мы можем предположить, что в течение жизни профессор через равные промежутки времени совершает выбор: уехать или остаться.  Его зарплата в этот момент обновляется в результате реализации случайного события.  Именно на основании такого анализа авторы статьи [1] и пришли к выводу о падении зарплат. В связи с этим мы можем предположить, что конкуренция за профессора не ведется на протяжении всех периодов, что по нашему мнению является вполне реалистичной предпосылкой, так как профессора редко меняют университет, исходя из этого можно заключить, что и в конкуренцию за профессоров ВУЗы вступают редко. Следовательно, в какие-то периоды мы будем снова оказываться в ситуации монопсонии. Тогда на протяжении всех периодов зарплата будет вести себя скачкообразно, если профессор всё это время оставался в городе. % если будет не хватать места, то я опишу математически этот эффект
+ 
+В динамике мы получили, что эффект понижения зарплат на олигопсонических рынках будет наблюдаться, однако теперь он слабее, чем на рынках, где присутствует лишь один университет определенного уровня.
 
 \section{Кейс}
 
